# tkconv

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  enrich.cc  inja.hpp  maak-indexen  meson.build  meta.cc  meta.hh  ooget.cc  oopull.cc  op.xslt  oppull.cc  playground.cc  scan-pdfs-oo.sh  scan-pdfs.sh  scanmon.cc  scanmon.hh  search.cc  search.hh  support.cc  support.hh  sws.cc  sws.hh  testrunner.cc  thingpool.hh  tk-div.xslt  tk.xslt  tkbot.cc  tkconv.cc  tkdisco.cc  tkfsck.cc  tkgetxml.cc  tkimprov.cc  tkindex.cc  tkparse.cc  tkpull.cc  tkserv.cc  users.cc
.github/workflows/: meson.yml
docker/: tksync.sh
html/: activiteit.html  activiteiten.html  autoComplete.css  besluiten.html  commissie.html  commissies.html  custom.css  geschenken.html  index.html  kamerleden.html  kamerstukdossiers.html  ksd.html  logic.js  ongeplande-activiteiten.html  op.css  open-vragen.html  persoon.html  search.html  stemmingen.html  style.css  toezeggingen.html  user.js  verslag.html  verslagen.html  zaak.html
mac-support/: README.md  catdoc.rb
partials/: activiteit.html  activiteiten.html  base.html  besluiten.html  commissie.html  commissies.html  custom.css  email.html  email.txt  error.html  geschenken.html  getorig.html  index.html  kamerleden.html  kamerstukdossiers.html  ksd.html  mijn.html  ongeplande-activiteiten.html  oo.html  oods.html  open-vragen.html  personen.html  persoon.html  search.html  stemmingen.html  toezegging.html  toezeggingen.html  uitleg.html  verslag.html  verslagen.html  zaak.html
subprojects/: argparse.wrap  cpp-httplib.wrap
